# cs237-upstream

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: cs237-config.cmake
cmake/modules/: FindGLFW.cmake
config/: cs237-config.h.cmake
cs237-library/: CMakeLists.txt
cs237-library/doc/: CMakeLists.txt  doxygen.cfg.in  main-page
cs237-library/include/: json.hpp  obj.hpp
cs237-library/include/cs237/: aabb.hpp  application.hpp  attachment.hpp  buffer.hpp  cs237.hpp  depth-buffer.hpp  gobjects.hpp  image.hpp  memory-obj.hpp  pipeline.hpp  plane.hpp  shader.hpp  texture.hpp  types.hpp  window.hpp
cs237-library/include/glm/detail/: setup.hpp
cs237-library/src/: CMakeLists.txt  aabb.cpp  application.cpp  attachment.cpp  cone.cpp  cube.cpp  depth-buffer.cpp  gobject-util.hpp  image.cpp  json-parser.cpp  json.cpp  memory-obj.cpp  mtl-reader.cpp  obj-reader.cpp  obj-reader.hpp  obj.cpp  shader.cpp  sphere.cpp  texture.cpp  window.cpp
labs/: CMakeLists.txt
labs/lab1/: CMakeLists.txt
labs/lab1/shaders/: CMakeLists.txt  shader.frag  shader.vert
labs/lab1/src/: CMakeLists.txt  main.cpp
labs/lab2/: CMakeLists.txt
labs/lab2/shaders/: CMakeLists.txt  shader.frag  shader.vert
labs/lab2/src/: CMakeLists.txt  main.cpp
labs/lab3/: CMakeLists.txt
labs/lab3/shaders/: CMakeLists.txt  shader.frag  shader.vert
labs/lab3/src/: CMakeLists.txt  main.cpp
labs/lab4/: CMakeLists.txt
labs/lab4/shaders/: CMakeLists.txt  shader.frag  shader.vert
labs/lab4/src/: CMakeLists.txt  main.cpp  mesh-data.cpp  mesh.hpp
labs/lab5/: CMakeLists.txt
labs/lab5/data/: license.txt
labs/lab5/shaders/: CMakeLists.txt  depth.frag  depth.vert  no-shadow.frag  no-shadow.vert  scene.frag  scene.vert  shadow.frag  shadow.vert
labs/lab5/src/: CMakeLists.txt  crate.cpp  drawable.cpp  drawable.hpp  floor.cpp  main.cpp  mesh.hpp  quad.hpp  uniforms.hpp
labs/lab6/: CMakeLists.txt
labs/lab6/shaders/: CMakeLists.txt  final-pass.frag  final-pass.vert  geom-pass.frag  geom-pass.vert
labs/lab6/src/: CMakeLists.txt  UNIFORMS.txt  crate.cpp  drawable.cpp  drawable.hpp  floor.cpp  gbuffer.cpp  gbuffer.hpp  main.cpp  quad.hpp  uniforms.hpp
labs/lab7/: CMakeLists.txt
labs/lab7/shaders/: CMakeLists.txt  mandelbrot.comp  render.frag  render.vert
labs/lab7/src/: CMakeLists.txt  main.cpp  x.cpp
projects/: CMakeLists.txt
projects/proj1/: CMakeLists.txt
projects/proj1/scenes/simple1/: scene.json
projects/proj1/scenes/simple2/: scene.json
projects/proj1/shaders/: CMakeLists.txt  flat.frag  flat.vert  gouraud.frag  gouraud.vert  phong.frag  phong.vert
projects/proj1/src/: CMakeLists.txt  app.cpp  app.hpp  instance.hpp  main.cpp  mesh.cpp  mesh.hpp  render-modes.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader-uniforms.hpp  vertex.hpp  window.cpp  window.hpp
projects/proj2/: CMakeLists.txt
projects/proj2/scenes/earth/: scene.json
projects/proj2/scenes/simple1/: README  scene.json
projects/proj2/src/: CMakeLists.txt  app.hpp  instance.hpp  main.cpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  scene.cpp  vertex.hpp  window.cpp  window.hpp
projects/proj2a/scenes/earth/: earth.mtl  scene.json
projects/proj2a/shaders/: CMakeLists.txt
projects/proj2a/src/: app.cpp  mesh.cpp  render-modes.hpp  renderer.hpp  scene.hpp  shader-uniforms.hpp  window.cpp  window.hpp
projects/proj3/: CMakeLists.txt
projects/proj3/scenes/earth/: scene.json
projects/proj3/scenes/ground+rock/: rock.mtl  scene.json
projects/proj3/shaders/: CMakeLists.txt
projects/proj3/src/: CMakeLists.txt  app.cpp  app.hpp  ground.cpp  height-field.cpp  height-field.hpp  instance.hpp  main.cpp  mesh.cpp  mesh.hpp  render-info.hpp  render-modes.hpp  scene.cpp  scene.hpp  shader-uniforms.hpp  vertex.hpp  window.cpp  window.hpp
projects/proj4/: CMakeLists.txt
projects/proj4/opengl-shaders/: dir-light.fsh  final.fsh  geo-pass.fsh  geo-pass.vsh  obj-to-clip.vsh  screen-quad.vsh  spot-light.fsh  ssao.fsh  stencil-pass.fsh  texture.fsh  texture.vsh  wireframe.fsh  wireframe.vsh
projects/proj4/opengl-src/: axes.cpp  axes.hpp  cone-mesh.cpp  cone-mesh.hpp  deferred-render.cpp  deferred-render.hpp  g-buffer.cpp  g-buffer.hpp  ground.cpp  ground.hpp  height-field.cpp  height-field.hpp  instance.hpp  main.cpp  mesh.cpp  mesh.hpp  render.cpp  render.hpp  scene.cpp  scene.hpp  spot-light.cpp  spot-light.hpp  ssao-util.cpp  ssao-util.hpp  view.cpp  view.hpp
projects/proj4/scenes/rocks/: rock.mtl  scene.json
projects/proj4/scenes/shapes/: scene.json
projects/proj4/scenes/sphere/: scene.json
projects/proj4/scenes/street/: StreetLamp.mtl  car.mtl  scene.json
projects/proj4/shaders/: CMakeLists.txt  texture.frag  texture.vert  wire-frame.frag  wire-frame.vert
projects/proj4/src/: CMakeLists.txt  app.cpp  app.hpp  ground.cpp  height-field.cpp  height-field.hpp  instance.hpp  main.cpp  mesh.cpp  mesh.hpp  render-modes.hpp  scene.cpp  scene.hpp  shader-uniforms.hpp  vertex.hpp  window.cpp  window.hpp
projects/proj5/: CMakeLists.txt
projects/proj5/scenes/rocks/: scene.json
projects/proj5/scenes/shapes/: scene.json  sphere.mtl
projects/proj5/scenes/sphere/: scene.json
projects/proj5/scenes/street/: car-emissive.graffle  scene.json
projects/proj5/scenes/street2/: CREDITS  Farmhouse.mtl  rock.mtl  scene.json
projects/proj5/shaders/: CMakeLists.txt  texture.frag  texture.vert  wire-frame.frag  wire-frame.vert
projects/proj5/src/: CMakeLists.txt  app.cpp  app.hpp  ground.cpp  height-field.cpp  height-field.hpp  instance.hpp  main.cpp  mesh.cpp  mesh.hpp  render-modes.hpp  scene.cpp  scene.hpp  vertex.hpp  window.cpp  window.hpp
