# CMake configuration labs
#
# CMSC 23740 -- Introduction to Real-Time Graphics
# Autumn 2024
# University of Chicago
#
# COPYRIGHT (c) 2024 John Reppy
# All rights reserved.
#

add_subdirectory(lab1 EXCLUDE_FROM_ALL)
add_subdirectory(lab2 EXCLUDE_FROM_ALL)
add_subdirectory(lab3 EXCLUDE_FROM_ALL)
add_subdirectory(lab4 EXCLUDE_FROM_ALL)
add_subdirectory(lab5 EXCLUDE_FROM_ALL)
add_subdirectory(lab6 EXCLUDE_FROM_ALL)
add_subdirectory(lab7 EXCLUDE_FROM_ALL)
