# CMake configuration for individual projects
#
# CMSC 23740 -- Introduction to Real-Time Graphics
# Autumn 2024
# University of Chicago
#
# COPYRIGHT (c) 2024 John Reppy
# All rights reserved.
#

add_subdirectory(proj1 EXCLUDE_FROM_ALL)
#add_subdirectory(proj2 EXCLUDE_FROM_ALL)
#add_subdirectory(proj3 EXCLUDE_FROM_ALL)
#add_subdirectory(proj4 EXCLUDE_FROM_ALL)
#add_subdirectory(proj5 EXCLUDE_FROM_ALL)
